[SERVER]: Fixed server plugin loading method